more scroll obj

--- a/code/index.html
+++ b/code/index.html
@@ -67,6 +67,10 @@
   <a href="red-bonsai"><img src="./images/a_045_nov.jpg" rel="red bonsai tree">
     <p>25.01.2024 07:28</p><h3>See this beautiful blood red tree, in november</h3> </a>
   </div>
+  <div class="extra-news">
+  <a href="trunk-work"><img src="./images/handwork-trunk-bonsai.jpg" rel="hand with tool working on trunk of bonsai tree">
+    <p>24.01.2024 09:48</p><h3>Bonsai Artist Matt Jukowski tells about his hand work with trunks</h3> </a>
+  </div>
 </div>
  
 <script>
@@ -118,14 +122,16 @@ function showSlides() {
     <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
   </div>
   <div class="img-column">
-    <a href="article-bonsai2.html"><img src="./images/photo-1627347902083-edbcaa5c4286.jfif" rel="Beutiful bonsai outdoors" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <a href="article-transport.html"><img src="./images/transportation-bonsai-truck.jpg" rel="transportation of bonsais"  style="width:100%">
+      <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
     <a href="article-bonsai3.html"><img src="./images/3388114954_1f6e49d25e_z_310x@2x.jpg" rel="artificial bonsai tree" style="width:100%">
+    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+ <a href="article-japan.html"><img src="./images/bonsai-japan.jpg" rel="bonsai in japanese traditional house" style="width:100%">
     <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
   </div>
   <div class="img-column">
-    <a href="article-juniper2.html"><img src="./images/artificial-bonsai-tree.jpg" rel="bonsai tree with tall straight trunk"  style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <a href="article-bonsai2.html"><img src="./images/photo-1627347902083-edbcaa5c4286.jfif" rel="Beutiful bonsai outdoors" style="width:100%">
+      <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
     <a href="article-juniper3.html"><img src="./images/bonsai.1.jpg" rel="closup femaile bonsai artist caring for bonsai" style="width:100%">
     <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
     <a href="article-juniper4.html"><img src="./images/ccbd8ca24e78e509092af753272310d1.jpg" rel="bonsai tree on grey background" style="width:100%">
