--- a/code/index.html
+++ b/code/index.html
@@ -55,7 +55,7 @@
   </div>
   <div class="my-slides fade">
     <a href="herbicide.html"><img src="./images/43-WhitePine1625-1.jpg" rel="thick bonsai tree on dark background" style="width:100%">
-      <p>25.01.2024 07:28</p><h3>Several trees targeted and posioned to death</h3><h4>At least 23 trees are dead</h4>
+      <p>25.01.2024 07:28</p><h3>Survivor of the atomic bomb dropped on Hiroshima, Japan during World War II.</h3>
     </a>
   </div>
   <div class="my-slides fade" id="last-image">
@@ -71,6 +71,10 @@
   <a href="trunk-work"><img src="./images/handwork-trunk-bonsai.jpg" rel="hand with tool working on trunk of bonsai tree">
     <p>24.01.2024 09:48</p><h3>Bonsai Artist Matt Jukowski tells about his hand work with trunks</h3> </a>
   </div>
+  <div class="extra-news">
+    <a href="fall-winter-bonsai"><img src="./images/tree-bonsai-no-leaves.jpg" rel="bonsai without leaves">
+      <p>23.01.2024 11:57</p><h3>What happens in winter? Bare Bonsai shows its trunks in winter</h3> </a>
+    </div>
 </div>
  
 <script>
@@ -115,35 +119,35 @@ function showSlides() {
 <section class="row-articles">
   <div class="img-column">
     <a href="article-juniper.html"><img src="./images/04-Juniper-ebensperger.jpg" rel="famous bonsai tree on diagonal platform" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <div class="article-text"><p>05.01.2024</p><h4>Bonsai Master Masahiko Kimura Creates Gravity-Defying Mini Forests</a></div>
     <a href="article-omiya.html"><img src="./images/juniper-bonsai-rock-omiya.jfif" rel="advanced bonsai tree on asian piedistal" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <div class="article-text"><p>04.01.2024</p><h4>Bonsai on rock in Omiya, Japan. A stunning composition of two Bonsai trees planted on a rock</h4></a></div>
     <a href="article-bonsai1.html"><img src="./images/7e851694-b98f-6db6-5ec0-7287ed0ca5e0_1024x1024.jpg" rel="bonsai with thick wavy trunk" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <div class="article-text"><p>04.01.2024</p><h4>800 years old, one of the most expensive Bonsai trees</h4></a></div>
   </div>
   <div class="img-column">
     <a href="article-transport.html"><img src="./images/transportation-bonsai-truck.jpg" rel="transportation of bonsais"  style="width:100%">
-      <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+      <div class="article-text"><p>03.01.2024</p><h4>Behind the scenes of Bonsai exhibitions, the logistics and transportations.</h4></a></div>
     <a href="article-bonsai3.html"><img src="./images/3388114954_1f6e49d25e_z_310x@2x.jpg" rel="artificial bonsai tree" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <div class="article-text"><p>03.01.2024</p><h4>How to get the right shape. Too Straight For a Juniper Bonsai?</h4></a></div>
  <a href="article-japan.html"><img src="./images/bonsai-japan.jpg" rel="bonsai in japanese traditional house" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <div class="article-text"><p>01.01.2024</p><h4>Traditional japanese pruning. Masters of the east.</h4></a></div>
   </div>
   <div class="img-column">
-    <a href="article-bonsai2.html"><img src="./images/photo-1627347902083-edbcaa5c4286.jfif" rel="Beutiful bonsai outdoors" style="width:100%">
-      <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <a href="article-juniper6.html"><img src="./images/How-to-Create-a-Cascade-Bonsai-Feature.jpg" style="width:100%" rel="hand holding bonsai tree">
+      <div class="article-text"><p>01.12.2023</p><h4>What do you actually know about trees? Learn about the natural growth patterns of trees</h4></a></div>
     <a href="article-juniper3.html"><img src="./images/bonsai.1.jpg" rel="closup femaile bonsai artist caring for bonsai" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <div class="article-text"><p>19.23.2023</p><h4>The worlds first and only female bonsai sensei master</h4></a></div>
     <a href="article-juniper4.html"><img src="./images/ccbd8ca24e78e509092af753272310d1.jpg" rel="bonsai tree on grey background" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <div class="article-text"><p>16.12.2023</p><h4>Shari Bonsai style (Sharimiki) -  bald or barkless parts where the bark has been removed with a sharp knife </h4></a></div>
   </div>
   <div class="img-column">
     <a href="article-bonsai4.html"><img src="./images/bonsai3..jpg" rel="male bonsai artist standing next to bonsai tree" style="width:100%">
-    <div class="article-text"><h4>Find out about this tree</h4></a></div>
+    <div class="article-text"><p>05.12.2023</p><h4>Top 5 most famous bonsai masters of all time</h4></a></div>
     <a href="article-juniper5.html"><img src="./images/juniper-bonsai-the-classic-choice-for-beginners-19517f7a-8ae1-42b3-845f-5a7a2aa0a327.jpg" rel="man working on bonsai tree" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
-    <a href="article-juniper6.html"><img src="./images/How-to-Create-a-Cascade-Bonsai-Feature.jpg" style="width:100%" rel="hand holding bonsai tree">
-  <div class="article-text"><p>05.01.2024</p><h3>Bonsai tree 1</h3><h4>Find out about this tree</h4></a></div>
+    <div class="article-text"><p>05.12.2023</p><h4>3 most efficient ways to prune a bonsai correctly</h4></a></div>
+    <a href="article-bonsai2.html"><img src="./images/photo-1627347902083-edbcaa5c4286.jfif" rel="Beutiful bonsai outdoors" style="width:100%">
+      <div class="article-text"><p>28.12.2023</p><h4>This village is a collection of bonsai nurseries</h4></a></div>
   
   </div>
 
