added the main news-box for mobile layout

--- a/code/index.html
+++ b/code/index.html
@@ -30,6 +30,22 @@
 
   </header>
 
+  <section>
+    <a class="big-news-box" target="_blank" href="https://www.tyrol.com/things-to-do/sports/climbing/via-ferratas">
+      <img src="assets/IMG_0021.jpg"
+        alt="a man who climbs along a mountainwall with the valley below and mountains in the background">
+      <div class="news-textbox">
+        <h2 class="text--center">Top 10 via ferratas Tyrol Austria</h2>
+        <p>
+          Do you want to feel a little tingling in your stomach and be amazed by the view both along the wall
+          and up at the top?!
+          <br>
+          If you go to Austria, you should go to Tyrol and do these 10 wonderful via ferratas.
+        </p>
+      </div>
+    </a>
+  </section>
+
 </body>
 
 </html>
