Changed the mobile cards

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <title>News Site</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="cards.css" />
@@ -34,15 +34,15 @@
     </nav>
 
     <nav class="nav-tablet">
-      <div class="nav-link"><a href="#Home">World News</a></div>
-      <div class="nav-link"><a href="#Home">Sports</a></div>
+      <div class="nav-link"><a href="#worldnews">World News</a></div>
+      <div class="nav-link"><a href="#sports">Sports</a></div>
       <div class="navigation-logo">
         <a href="index.html"
           ><img src="assets/RaglanLogoWhite.png" alt="Logo"
         /></a>
       </div>
-      <div class="nav-link"><a href="#Home">Commerce</a></div>
-      <div class="nav-link"><a href="#Home">Weather</a></div>
+      <div class="nav-link"><a href="#commerce">Commerce</a></div>
+      <div class="nav-link"><a href="#weather">Weather</a></div>
     </nav>
 
     <nav class="nav-desktop">
@@ -57,11 +57,11 @@
       </div>
 
       <div class="nav-right push">
-        <a class="nav-link" href="#Home">World News</a>
+        <a class="nav-link" href="#worldnews">World News</a>
       </div>
-      <div class="nav-right"><a href="#Home">Sports</a></div>
-      <div class="nav-right"><a href="#Home">Commerce</a></div>
-      <div class="nav-right"><a href="#Home">Weather</a></div>
+      <div class="nav-right"><a href="#sports">Sports</a></div>
+      <div class="nav-right"><a href="#commerce">Commerce</a></div>
+      <div class="nav-right"><a href="#weather">Weather</a></div>
     </nav>
 
     <div class="big-article-container">
@@ -136,6 +136,30 @@
         <div class="card-content">
           <h2>Tea reading</h2>
           <p>The best way to enjoy a good book...</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="images/teacake.jpg" alt="" class="card-image" />
+        <div class="card-content">
+          <h2>Food for thought</h2>
+          <p>The best way to enjoy food is with tea...</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="images/teaspill.jpg" alt="" class="card-image" />
+        <div class="card-content">
+          <h2>What a waste</h2>
+          <p>This should be investigated by the Hague...</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="images/teaspoon.jpg" alt="" class="card-image" />
+        <div class="card-content">
+          <h2>Don't get caught with this</h2>
+          <p>It's the good stuff...</p>
         </div>
       </div>
     </div>
