Added Alt Text to images

--- a/code/index.html
+++ b/code/index.html
@@ -132,7 +132,11 @@
       </div>
 
       <div class="card">
-        <img src="images/teasmall.jpg" alt="" class="card-image" />
+        <img
+          src="images/teasmall.jpg"
+          alt="Tea mug with book"
+          class="card-image"
+        />
         <div class="card-content">
           <h2>Tea reading</h2>
           <p>The best way to enjoy a good book...</p>
@@ -140,7 +144,11 @@
       </div>
 
       <div class="card">
-        <img src="images/teacake.jpg" alt="" class="card-image" />
+        <img
+          src="images/teacake.jpg"
+          alt="Tea on a plate with cake"
+          class="card-image"
+        />
         <div class="card-content">
           <h2>Food for thought</h2>
           <p>The best way to enjoy food is with tea...</p>
@@ -148,7 +156,11 @@
       </div>
 
       <div class="card">
-        <img src="images/teaspill.jpg" alt="" class="card-image" />
+        <img
+          src="images/teaspill.jpg"
+          alt="Almost overflowing teapot"
+          class="card-image"
+        />
         <div class="card-content">
           <h2>What a waste</h2>
           <p>This should be investigated by the Hague...</p>
@@ -156,7 +168,11 @@
       </div>
 
       <div class="card">
-        <img src="images/teaspoon.jpg" alt="" class="card-image" />
+        <img
+          src="images/teaspoon.jpg"
+          alt="Spoons with different teas"
+          class="card-image"
+        />
         <div class="card-content">
           <h2>Don't get caught with this</h2>
           <p>It's the good stuff...</p>
