Removed unnecessary files

--- a/code/index.html
+++ b/code/index.html
@@ -64,6 +64,7 @@
       <div class="nav-right"><a href="#weather">Weather</a></div>
     </nav>
 
+    <!-- Main Content-->
     <div class="big-article-container">
       <img
         class="big-article-image"
