--- a/code/index.html
+++ b/code/index.html
@@ -120,10 +120,10 @@ function showSlides() {
   <div class="img-column">
     <a href="article-juniper.html"><img src="./images/04-Juniper-ebensperger.jpg" rel="famous bonsai tree on diagonal platform" style="width:100%">
     <div class="article-text"><p>05.01.2024</p><h4>Bonsai Master Masahiko Kimura Creates Gravity-Defying Mini Forests</a></div>
-    <a href="article-omiya.html"><img src="./images/juniper-bonsai-rock-omiya.jfif" rel="advanced bonsai tree on asian piedistal" style="width:100%">
-    <div class="article-text"><p>04.01.2024</p><h4>Bonsai on rock in Omiya, Japan. A stunning composition of two Bonsai trees planted on a rock</h4></a></div>
-    <a href="article-bonsai1.html"><img src="./images/7e851694-b98f-6db6-5ec0-7287ed0ca5e0_1024x1024.jpg" rel="bonsai with thick wavy trunk" style="width:100%">
-    <div class="article-text"><p>04.01.2024</p><h4>800 years old, one of the most expensive Bonsai trees</h4></a></div>
+      <a href="article-juniper6.html"><img src="./images/How-to-Create-a-Cascade-Bonsai-Feature.jpg" style="width:100%" rel="hand holding bonsai tree">
+        <div class="article-text"><p>01.12.2023</p><h4>What do you actually know about trees? Learn about the natural growth patterns of trees</h4></a></div>
+    <a href="article-juniper5.html"><img src="./images/juniper-bonsai-the-classic-choice-for-beginners-19517f7a-8ae1-42b3-845f-5a7a2aa0a327.jpg" rel="man working on bonsai tree" style="width:100%">
+      <div class="article-text"><p>05.12.2023</p><h4>3 most efficient ways to prune a bonsai correctly</h4></a></div>
   </div>
   <div class="img-column">
     <a href="article-transport.html"><img src="./images/transportation-bonsai-truck.jpg" rel="transportation of bonsais"  style="width:100%">
@@ -134,8 +134,8 @@ function showSlides() {
     <div class="article-text"><p>01.01.2024</p><h4>Traditional japanese pruning. Masters of the east.</h4></a></div>
   </div>
   <div class="img-column">
-    <a href="article-juniper6.html"><img src="./images/How-to-Create-a-Cascade-Bonsai-Feature.jpg" style="width:100%" rel="hand holding bonsai tree">
-      <div class="article-text"><p>01.12.2023</p><h4>What do you actually know about trees? Learn about the natural growth patterns of trees</h4></a></div>
+    <a href="article-omiya.html"><img src="./images/juniper-bonsai-rock-omiya.jpg" rel="advanced bonsai tree on asian piedistal" style="width:100%">
+      <div class="article-text"><p>04.01.2024</p><h4>Bonsai on rock in Omiya, Japan. A stunning composition of two Bonsai trees planted on a rock</h4></a></div>
     <a href="article-juniper3.html"><img src="./images/bonsai.1.jpg" rel="closup femaile bonsai artist caring for bonsai" style="width:100%">
     <div class="article-text"><p>19.23.2023</p><h4>The worlds first and only female bonsai sensei master</h4></a></div>
     <a href="article-juniper4.html"><img src="./images/ccbd8ca24e78e509092af753272310d1.jpg" rel="bonsai tree on grey background" style="width:100%">
@@ -144,9 +144,9 @@ function showSlides() {
   <div class="img-column">
     <a href="article-bonsai4.html"><img src="./images/bonsai3..jpg" rel="male bonsai artist standing next to bonsai tree" style="width:100%">
     <div class="article-text"><p>05.12.2023</p><h4>Top 5 most famous bonsai masters of all time</h4></a></div>
-    <a href="article-juniper5.html"><img src="./images/juniper-bonsai-the-classic-choice-for-beginners-19517f7a-8ae1-42b3-845f-5a7a2aa0a327.jpg" rel="man working on bonsai tree" style="width:100%">
-    <div class="article-text"><p>05.12.2023</p><h4>3 most efficient ways to prune a bonsai correctly</h4></a></div>
-    <a href="article-bonsai2.html"><img src="./images/photo-1627347902083-edbcaa5c4286.jfif" rel="Beutiful bonsai outdoors" style="width:100%">
+    <a href="article-bonsai1.html"><img src="./images/7e851694-b98f-6db6-5ec0-7287ed0ca5e0_1024x1024.jpg" rel="bonsai with thick wavy trunk" style="width:100%">
+      <div class="article-text"><p>04.01.2024</p><h4>800 years old, one of the most expensive Bonsai trees</h4></a></div>
+    <a href="article-bonsai2.html"><img src="./images/photo-1627347902083-edbcaa5c4286.jpg" rel="Beutiful bonsai outdoors" style="width:100%">
       <div class="article-text"><p>28.12.2023</p><h4>This village is a collection of bonsai nurseries</h4></a></div>
   
   </div>
