Cleaned up the code, added some comments

--- a/code/index.html
+++ b/code/index.html
@@ -54,7 +54,7 @@
         <p class="caption">Photo by Erika Wernbro</p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button">
+      <div class="button-div">
         <button>Read more</button>
       </div>
     </div>
@@ -65,7 +65,7 @@
         <p class="caption">Photo by <a href="https://unsplash.com/@dcocciardi?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Delfina Cocciardi</a> on <a href="https://unsplash.com/photos/burger-with-lettuce-and-tomato-NDPBK-d-03M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button">
+      <div class="button-div">
         <button>Read more</button>
       </div>
     </div>
@@ -78,7 +78,7 @@
         </p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button">
+      <div class="button-div">
         <button>Read more</button>
       </div>
     </div>
@@ -95,7 +95,7 @@
       <p>
         Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.
       </p>
-      <div class="button">
+      <div class="button-div">
         <button>Read more</button>
       </div>
     </div>
@@ -107,7 +107,7 @@
         </p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button">
+      <div class="button-div">
         <button>Read more</button>
       </div>
     </div>
@@ -118,7 +118,7 @@
         <p class="caption">Photo by Erika Wernbro</p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button">
+      <div class="button-div">
         <button>Read more</button>
       </div>
     </div>
@@ -130,7 +130,7 @@
         </p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button">
+      <div class="button-div">
         <button>Read more</button>
       </div>
     </div>
@@ -141,7 +141,7 @@
         <p class="caption">Photo by Erika Wernbro</p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
-      <div class="button">
+      <div class="button-div">
         <button>Read more</button>
       </div>
     </div>
