added a news grid

--- a/code/index.html
+++ b/code/index.html
@@ -14,9 +14,11 @@
 </head>
 
 <body class="container">
-
-  <header class="header-for-mobile">
-    <h1>Wanderlust</h1>
+  <header class="header-mobile">
+    <div class="slogan">
+      <h1>Wanderlust</h1>
+      <p>Let the adventure begin ..</p>
+    </div>
     <div class="dropdown-menu">
       <i class="fa-solid fa-bars fa-2xl dropdown-menu-icon"></i>
       <nav class="dropdown-menu-content">
@@ -29,9 +31,9 @@
     <img class="header-decorative-image" src="assets/footprints-1.png">
 
   </header>
-
+  <h2 class="text--center font-color">~ Hiking special issue ~</h2>
   <section>
-    <a class="big-news-box" target="_blank" href="https://www.tyrol.com/things-to-do/sports/climbing/via-ferratas">
+    <div class="big-news-box">
       <img src="assets/IMG_0021.jpg"
         alt="a man who climbs along a mountainwall with the valley below and mountains in the background">
       <div class="news-textbox">
@@ -42,10 +44,63 @@
           <br>
           If you go to Austria, you should go to Tyrol and do these 10 wonderful via ferratas.
         </p>
+        <a class="news-button" target="_blank" href="https://www.tyrol.com/things-to-do/sports/climbing/via-ferratas">
+          Lets climb!</a>
+      </div>
+      </a>
+  </section>
+  <section class="news-grid">
+
+    <a class="small-news-box" target="_blank"
+      href="https://lauterbrunnen.swiss/en/discover/routes-and-tours/summer-routes.html#area=1033393&cat=Hiking-main,Hiking%20Trail,25143811,Nature%20Trail,Mountaineering-main,Via%20Ferrata,Mountain%20Hike,City%20Walking,Promenade%20Route&filter=r-fullyTranslatedLangus-,r-onlyOpened-,sb-sortedBy-0&wt=Lauterbrunnen%20(Interlaken-Oberhasli,%20Bern,%20Switzerland)%0A1033393&zc=11,7.9064,46.55329">
+      <img src="assets/IMG_0014.jpg" alt="a path with a green valley below and big mountains in the background">
+      <div class="news-textbox">
+        <h2 class="text--center">Hiking in Lauterbrunnen <br> Switzerland</h2>
       </div>
     </a>
-  </section>
 
+    <a class="small-news-box" target="_blank"
+      href="https://fjallsakerhetsradet.se/en/preparations/tips-for-a-safe-visit-in-the-mountains/tips-for-safe-hiking/">
+      <img src="assets/IMG_0040.JPG">
+      <h2 class="text--center">Tips for safe hiking</h2>
+    </a>
+
+    <a class="small-news-box" target="_blank"
+      href="https://www.tyrol.com/things-to-do/attractions/nature-parks/nature-park-karwendel">
+      <img src="assets/IMG_0035.JPG" alt="a small little stream with high rock walls on each side of it.">
+      <div class="news-textbox">
+        <h2 class="text--center">Karwendel nature park <br> Austria</h2>
+      </div>
+    </a>
+
+    <a class="small-news-box" target="_blank" href="https://neuschwansteincastle.net/">
+      <img src="assets/IMG_0029.JPG" alt="the neuschwanstein castle in with a forest below">
+      <h2 class="text--center">Disney's Sleeping beauty castle <br> Germany</h2>
+    </a>
+
+    <a class="small-news-box" target="_blank" href="https://www.skistar.com/en/Summer/hike-run/">
+      <img src="assets/IMG_0041.JPG"
+        alt="a person walking on a path with green vegetation on each side and a blue sunny sky above">
+      <h2 class="text--center">Summer at swedish skiresorts</h2>
+    </a>
+
+    <a class="small-news-box" target="_blank"
+      href="https://www.friluftsframjandet.se/lat-aventyret-borja/kunskap--guider/sova-ute/stora-sova-ute-guiden/">
+      <img src="assets/IMG_0059.JPG">
+      <h2 class="text--center"> Tips for sleeping outside</h2>
+    </a>
+
+    <a class="small-news-box" target="_blank" href="https://www.visiticeland.com/article/hiking-in-iceland">
+      <img src="assets/IMG_0030.JPG">
+      <h2 class="text--center">Hiker’s paradise <br> Iceland</h2>
+    </a>
+
+    <a class="small-news-box" target="_blank" href="https://www.ridestore.com/mag/best-dried-food-for-hiking/">
+      <img src="assets/IMG_0063.JPG">
+      <h2 class="text--center">Best dried food for hiking </h2>
+    </a>
+
+  </section>
 </body>
 
 </html>
