--- a/code/index.html
+++ b/code/index.html
@@ -169,7 +169,7 @@ function showSlides() {
 
     <section class="video-section">
       <div class="instruction-video" id="juniper"><iframe src="https://www.youtube.com/embed/rLaFu3pHsi4?si=0AkoP9O701X-ng6M" rel="video of how to create a juniper bonsai" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-      <div class="video-text" id="juniper-text">
+      <div class="video-text">
         <h3><span>Learn how to create a Juniper Bonsai</span></h3>
         <p>Watch this instruction video on how to work with the juniper tree, and use its specific characteristics.</p>
         <button class="button-1">Learn more</button>
@@ -177,12 +177,12 @@ function showSlides() {
       <div class="instruction-video" id="kimura">
         <iframe src="https://www.youtube.com/embed/r4hEPHEJTYU?si=vom_NGqrWe-5hDgW" rel="video of Masahiko kimuras garden" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
-<div class="video-text" id="kimura-text">
+<div class="video-text">
   <h3><span>Visit Masahiko Kimura's Bonsai garden</span></h3>
   <p>Who is Master Masahiko Kimura, and what bonsai does he have in his garden? Learn from this Bonsai sensei.</p>
   <button class="button-1">Learn more</button>
 </div> 
-      <div class="instruction-video" id="repotting">
+      <div class="instruction-video" >
         <iframe src="https://www.youtube.com/embed/__ZYsymsdn8?si=VdqXXJuIRlVvIHRI" rel="Repotting of Ponderosa Bonsai" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
       <div class="video-text" id="repotting-text">
         <h3><span>Repotting of Ponderosa Bonsai</span></h3>
