--- a/code/index.html
+++ b/code/index.html
@@ -6,70 +6,88 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Brainstorming Project</title>
   <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap">
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <!-- Navigation bar relative URLs, img and h1 -->
     <nav class="navigation-bar-img">
       <img src="instagram-logo.png" alt="black-and-white-instagram-logo" width="30px" height="30px">
     </nav>
+    <!-- <nav>
+            <a href="#about" class="about">About</a>
+            <a href="#more-ideas" class="more-ideas">More ideas</a>
+            <a href="#your-turn" class="your-turn">Your turn!</a>
+        </nav> -->
     <nav class="navigation-bar">
-      <a href="#about">About</a>
-      <a href="#more-ideas">More ideas</a>
-      <a href="#your-turn">Your turn!</a>
+      <a href="#about" class="about">About</a>
+      <a href="#more-ideas" class="more-ideas">More ideas</a>
+      <a href="#your-turn" your-turn>Your turn!</a>
     </nav>
     <nav class="navigation-bar-title">
       <h1>The Brainstorming Project!</h1>
     </nav>
   </header>
 
-  <section class="text-box-flex">
-    <p class="">In the early days of 2024, when people where still eating leftovers from Christmas and realizing how
+  <section class="text-box-grid">
+    <p>In the early days of 2024, when people where still eating leftovers from Christmas and realizing how
       poor they
       where after splurging throughout December even though society was in the middle of the next global Great
       Depression™ a few people in Sweden entered a project that wasn’t a project until... it was a project.<br>
-      The author of this webpage was so fully immersed in learning how to code, that all the creativity she had and
+      The author of this webpage was so fully immersed in learning how to code, that all the creativity she had
+      and
       that needed to be released and was the main reason for her career change, disappeared. Left in her brain was
-      only Flexbox Froggy and the question if she had watered her real plants or if she only had played Grid Garden.
+      only Flexbox Froggy and the question if she had watered her real plants or if she only had played Grid
+      Garden.
       Also, had she had a drink of water herself? Probably not. <br> As her mind was blank, she reached out to her
       friends on the social media platform Instagram with the question:
       “What should I write about?” with the intention of designing a news site based on one of the answers. Fast
-      forward to the next morning when her DM was full of fantastic and hilarious suggestions and thus the birth of
+      forward to the next morning when her DM was full of fantastic and hilarious suggestions and thus the birth
+      of
       the Brainstorming Project!<br>
       This website will show all the answers in Swedish, but as I continue to learn through out this Boot camp
-      experience I have the intention to code som kind of translation function because there has to be one - right?
+      experience I have the intention to code som kind of translation function because there has to be one -
+      right?
       Also, wouldn’t in be cool to have a function where you can continue brainstorming on this website?
     </p>
-    <button class="brainstorm-button">Brainstorm with me!</button>
+    <div class="nested-grid">
+      <img src="image0 (kopia).jpeg" alt="picture of question box" width="200px" height="120px" class="pic-box-grid">
+      <button class="brainstorm-button">Brainstorm with me!</button>
+    </div>
   </section>
 
-  <section class="instagram-story-img">
-    <img src="hemulen.jpg" alt="picture-of-hemulen-text" height="100px" width="100px">
-    <img src="CVI.jpg" alt="picture-of-cvi-text" height="100px" width="100px">
-    <img src="friggebodar.jpg" alt="picture-of-friggebodar-text" height="100px" width="100px">
-    <img src="ekar.jpg" alt="picture-of-ekar-text" height="100px" width="100px">
-    <img src="harry-styes.jpg" alt="picture-of-harrystyles-text" height="100px" width="100px">
-    <img src="invasiva-arter.jpg" alt="picture-of-invasiva-text" height="100px" width="100px">
-    <img src="isbad.jpg" alt="picture-of-isbad-text" height="100px" width="100px">
-    <img src="komododrakar.jpg" alt="picture-of-komododrakar-text" height="100px" width="100px">
-    <img src="kvalitativa-vetenskapliga-metoder.jpg" alt="picture-of-kvm-text" height="100px" width="100px">
-    <img src="mensvärk.jpg" alt="picture-of-mensvärk-text" height="100px" width="100px">
-    <img src="mussor.jpg" alt="picture-of-musslor-text" height="100px" width="100px">
-    <img src="träd.jpg" alt="picture-of-träd-text" height="100px" width="100px">
-    <img src="renar.jpg" alt="picture-of-renar-text" height="100px" width="100px">
-    <img src="perfekta-jobbet.jpg" alt="picture-of-perfektajobbet-text" height="100px" width="100px">
-    <img src="träd-skåningar.jpg" alt="picture-of-trädskåne-text" height="100px" width="100px">
-    <img src="vikingar.jpg" alt="picture-of-vikingar-text" height="100px" width="100px">
-    <img src="Twin-peaks.jpg" alt="picture-of-twinpeaks-text" height="100px" width="100px">
-    <img src="pandor.jpg" alt="picture-of-pandor-text" height="100px" width="100px">
-    <img src="sengångare.jpg" alt="picture-of-sengångare-text" height="100px" width="100px">
-    <button class="idea-button">View more ideas!</button>
+  <section class="instagram-story-img-box">
+    <div class="instagram-story-img">
+      <img src="hemulen.jpg" alt="picture-of-hemulen-text" height="100px" width="100px">
+      <img src="CVI.jpg" alt="picture-of-cvi-text" height="100px" width="100px">
+      <img src="friggebodar.jpg" alt="picture-of-friggebodar-text" height="100px" width="100px">
+      <img src="ekar.jpg" alt="picture-of-ekar-text" height="100px" width="100px">
+      <img src="harry-styes.jpg" alt="picture-of-harrystyles-text" height="100px" width="100px">
+      <img src="invasiva-arter.jpg" alt="picture-of-invasiva-text" height="100px" width="100px">
+      <img src="isbad.jpg" alt="picture-of-isbad-text" height="100px" width="100px">
+      <img src="komododrakar.jpg" alt="picture-of-komododrakar-text" height="100px" width="100px">
+      <img src="kvalitativa-vetenskapliga-metoder.jpg" alt="picture-of-kvm-text" height="100px" width="100px">
+      <img src="mensvärk.jpg" alt="picture-of-mensvärk-text" height="100px" width="100px">
+      <img src="mussor.jpg" alt="picture-of-musslor-text" height="100px" width="100px">
+      <img src="träd.jpg" alt="picture-of-träd-text" height="100px" width="100px">
+      <img src="renar.jpg" alt="picture-of-renar-text" height="100px" width="100px">
+      <img src="perfekta-jobbet.jpg" alt="picture-of-perfektajobbet-text" height="100px" width="100px">
+      <img src="träd-skåningar.jpg" alt="picture-of-trädskåne-text" height="100px" width="100px">
+      <img src="vikingar.jpg" alt="picture-of-vikingar-text" height="100px" width="100px">
+      <img src="Twin-peaks.jpg" alt="picture-of-twinpeaks-text" height="100px" width="100px">
+      <img src="pandor.jpg" alt="picture-of-pandor-text" height="100px" width="100px">
+      <img src="sengångare.jpg" alt="picture-of-sengångare-text" height="100px" width="100px">
+      <button class="idea-button">View more ideas!</button>
+    </div>
   </section>
   <footer>
-    <button class="instagram-button">
-      <a href="https://www.instagram.com/thorleifs_as/" target="_blank">Jump to my Instagram</a>
-    </button>
+    <div class="footer">
+      <button class="instagram-button">
+        <a href="https://www.instagram.com/thorleifs_as/" target="_blank">Jump to my Instagram</a>
+      </button>
+    </div>
   </footer>
 </body>
 
