fixed responsiveness for tablet and addad a footer

--- a/code/index.html
+++ b/code/index.html
@@ -45,7 +45,7 @@
         <img src="./assets/headline-image.jpg" alt="Blonde young girl dressed in pink reading a book">
         <div class="text-container">
             <h1>Good news about mental health and reading for fun as a child</h1>
-            <p>Young children who spend about 12 hours a week reading for pleasure tend to do better on cognitive tests, according to research published in the journal Psychological Medicine.</p>
+            <p>Young children who spend about 12 hours a week reading for pleasure tend to do better on cognitive tests and have better mental health when they are adolescents than those who have not developed this reading habit, according to research published in the journal Psychological Medicine.</p>
             <button class="button-1" role="button">Read more here</button>
           </div>
     </div>
@@ -129,6 +129,11 @@
 
     </section>
     <!--OTHER NEWS CARDS ENDS HERE-->
+
+    <footer class="footer">
+      <img src="logo.svg" class="footer-item"/>
+      <p class="footer-item">Coded by Alma Herrström as a part of Technigo Web Development Bootcamp spring 2024</p>
+    </footer>
   </main>
   </body>
 </html>
