added media queries for tablet and desktop

--- a/code/index.html
+++ b/code/index.html
@@ -23,32 +23,33 @@
       <i class="fa-solid fa-bars fa-2xl dropdown-menu-icon"></i>
       <nav class="dropdown-menu-content">
         <a href="inspiration.html">Inspiration</a>
-        <a href="hiking.html">Hiking</a>
-        <a href="climbing.html">Climbing</a>
+        <a href="Resmål.html">Resmål</a>
       </nav>
     </div>
 
     <img class="header-decorative-image" src="assets/footprints-1.png">
 
   </header>
-  <h2 class="text--center font-color">~ Hiking special issue ~</h2>
-  <section>
-    <div class="big-news-box">
-      <img src="assets/IMG_0021.jpg"
-        alt="a man who climbs along a mountainwall with the valley below and mountains in the background">
-      <div class="news-textbox">
-        <h2 class="text--center">Top 10 via ferratas Tyrol Austria</h2>
-        <p>
-          Do you want to feel a little tingling in your stomach and be amazed by the view both along the wall
-          and up at the top?!
-          <br>
-          If you go to Austria, you should go to Tyrol and do these 10 wonderful via ferratas.
-        </p>
-        <a class="news-button" target="_blank" href="https://www.tyrol.com/things-to-do/sports/climbing/via-ferratas">
-          Lets climb!</a>
-      </div>
-      </a>
+  <h2 class="text--center font-color tablet-fontsize">~ Hiking special issue ~</h2>
+  <section class="big-news-box">
+
+
+    <img src="assets/IMG_0021.jpg"
+      alt="a man who climbs along a mountainwall with the valley below and mountains in the background">
+
+    <div class="news-textbox">
+      <h2 class="text--center">Top 10 via ferratas Tyrol Austria</h2>
+      <p>
+        Do you want to feel a little tingling in your stomach and be amazed by the view both along the wall
+        and up at the top?!
+        <br>
+        If you go to Austria, you should go to Tyrol and do these 10 wonderful via ferratas.
+      </p>
+      <a class="news-button" target="_blank" href="https://www.tyrol.com/things-to-do/sports/climbing/via-ferratas">
+        Lets climb!</a>
+
   </section>
+  <h2 class="font-color no-margin-below text--center">Inspiration and tips for your future hikes to come:</h2>
   <section class="news-grid">
 
     <a class="small-news-box" target="_blank"
@@ -61,7 +62,7 @@
 
     <a class="small-news-box" target="_blank"
       href="https://fjallsakerhetsradet.se/en/preparations/tips-for-a-safe-visit-in-the-mountains/tips-for-safe-hiking/">
-      <img src="assets/IMG_0040.JPG">
+      <img src="assets/IMG_0040.JPG" alt="a path crossing with a road sign on the left and fog in the background.">
       <h2 class="text--center">Tips for safe hiking</h2>
     </a>
 
@@ -74,7 +75,7 @@
     </a>
 
     <a class="small-news-box" target="_blank" href="https://neuschwansteincastle.net/">
-      <img src="assets/IMG_0029.JPG" alt="the neuschwanstein castle in with a forest below">
+      <img src="assets/IMG_0029.JPG" alt="the neuschwanstein castle with a forest below">
       <h2 class="text--center">Disney's Sleeping beauty castle <br> Germany</h2>
     </a>
 
@@ -86,17 +87,17 @@
 
     <a class="small-news-box" target="_blank"
       href="https://www.friluftsframjandet.se/lat-aventyret-borja/kunskap--guider/sova-ute/stora-sova-ute-guiden/">
-      <img src="assets/IMG_0059.JPG">
+      <img src="assets/IMG_0059.JPG" alt="a blue tent in the forest at dusk">
       <h2 class="text--center"> Tips for sleeping outside</h2>
     </a>
 
     <a class="small-news-box" target="_blank" href="https://www.visiticeland.com/article/hiking-in-iceland">
-      <img src="assets/IMG_0030.JPG">
+      <img src="assets/IMG_0030.JPG" alt="a person walking up a stony, barren and gray part of the mountain.">
       <h2 class="text--center">Hiker’s paradise <br> Iceland</h2>
     </a>
 
     <a class="small-news-box" target="_blank" href="https://www.ridestore.com/mag/best-dried-food-for-hiking/">
-      <img src="assets/IMG_0063.JPG">
+      <img src="assets/IMG_0063.JPG" alt="dried food for hiking">
       <h2 class="text--center">Best dried food for hiking </h2>
     </a>
 
