--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="logo">
-            <a href="file:///Users/almaherrstrom/Desktop/technigo-projects/project-news-site/code/index.html"><img class="logo-img" src="./assets/logo-book.png" /></a>
+            <a href="#"><img class="logo-img" src="./assets/logo-book.png" /></a>
             <div class="logo-name">
               <h2>BookWorm News</h2>
             </div>
