--- a/code/index.html
+++ b/code/index.html
@@ -170,7 +170,7 @@
                 <span>Created by Frida Forser 2024</span>
                 <div class="flex-child technigo"><a target="_blank" title="Technigo" 
                     href="https://www.technigo.io">
-            <img src="logo.svg">
+            <img src="logo.svg" width="70px">
         </a></div>
                 
 </div>
