--- a/code/index.html
+++ b/code/index.html
@@ -1,42 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>Wanderlust</title>
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Autour+One">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body class="container">
-  <header class="header-mobile">
-    <div class="slogan">
+<body>
+  <header class="header-box">
+    <div>
       <h1>Wanderlust</h1>
       <p>Let the adventure begin ..</p>
     </div>
+
+    <!--dropdown menu for mobile and tablets-->
     <div class="dropdown-menu">
       <i class="fa-solid fa-bars fa-2xl dropdown-menu-icon"></i>
       <nav class="dropdown-menu-content">
-        <a href="inspiration.html">Inspiration</a>
-        <a href="Resmål.html">Resmål</a>
+        <a href="">Inspiration</a>
+        <a href="">Destination</a>
+        <a href="">Activities</a>
       </nav>
     </div>
 
-    <img class="header-decorative-image" src="assets/footprints-1.png">
+    <!--navigationbar for desktops-->
+    <nav class="desktop-menu">
+      <a href="">Inspiration</a>
+      <a href="">Activities</a>
+      <a href="">Destination</a>
+    </nav>
+
+    <img class="header-decorative-image" src="assets/footprints-1.png" alt="footprints">
 
   </header>
-  <h2 class="text--center font-color tablet-fontsize">~ Hiking special issue ~</h2>
+
+  <h2 class="text--center font-color tablet-fontsize">~ Hiking special edition ~</h2>
   <section class="big-news-box">
-
-
     <img src="assets/IMG_0021.jpg"
       alt="a man who climbs along a mountainwall with the valley below and mountains in the background">
-
     <div class="news-textbox">
       <h2 class="text--center">Top 10 via ferratas Tyrol Austria</h2>
       <p>
@@ -47,11 +55,12 @@
       </p>
       <a class="news-button" target="_blank" href="https://www.tyrol.com/things-to-do/sports/climbing/via-ferratas">
         Lets climb!</a>
-
+    </div>
   </section>
-  <h2 class="font-color no-margin-below text--center">Inspiration and tips for your future hikes to come:</h2>
-  <section class="news-grid">
 
+  <h2 class="font-color no-margin-below text--center">Inspiration and tips for your future hikes to come:</h2>
+
+  <section class="news-grid">
     <a class="small-news-box" target="_blank"
       href="https://lauterbrunnen.swiss/en/discover/routes-and-tours/summer-routes.html#area=1033393&cat=Hiking-main,Hiking%20Trail,25143811,Nature%20Trail,Mountaineering-main,Via%20Ferrata,Mountain%20Hike,City%20Walking,Promenade%20Route&filter=r-fullyTranslatedLangus-,r-onlyOpened-,sb-sortedBy-0&wt=Lauterbrunnen%20(Interlaken-Oberhasli,%20Bern,%20Switzerland)%0A1033393&zc=11,7.9064,46.55329">
       <img src="assets/IMG_0014.jpg" alt="a path with a green valley below and big mountains in the background">
@@ -100,8 +109,12 @@
       <img src="assets/IMG_0063.JPG" alt="dried food for hiking">
       <h2 class="text--center">Best dried food for hiking </h2>
     </a>
-
   </section>
+
+  <footer>
+    <p class="align-right">Created by Maja Schouenke</p>
+  </footer>
+
 </body>
 
 </html>
