--- a/code/index.html
+++ b/code/index.html
@@ -51,6 +51,9 @@
 
     <a target="_blank" href="https://www.google.com">
         <section class="grid-parent-head-news">
+        <div class="head-news-img-mobile">
+                <img src="https://images.unsplash.com/photo-1586892478377-bb79da0a70c2?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="300px">
+            </div>
             <div class="head-news-img">
                 <img src="https://images.unsplash.com/photo-1586892478377-bb79da0a70c2?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="550px">
             </div>
